--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 axum = "0.7.4"
 serde = "1.0.197"
 serde_json = "1.0.114"
-sqlx = "0.7.3"
+sqlx = { version = "0.7.3", features = ["runtime-tokio"] }
 tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
