--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 
 # We place member crates in the src/ directory:
-members = [
+members = [ "src/lz-core",
   "src/lz-db",
   "src/lz-web"
 ]
