Switch to sqlx from rusqlite: typechecked queries
This comes at the cost of some dev inconvenience (you have to keep a
DB around & migrate that & generate query info from it, and syntax
must check at all times); but it's a lot more modern-feeling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 
 # We place member crates in the src/ directory:
-members = [ "src/lz-core",
+members = [
   "src/lz-db",
   "src/lz-web"
 ]
