--- a/src/lz-db/Cargo.toml
+++ b/src/lz-db/Cargo.toml
@@ -7,16 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.80"
-barrel = { version = "0.7.0", features = ["sqlite3"] }
-refinery = { version = "0.8.12", features = ["rusqlite"] }
-rusqlite = { version = "0.30", features = ["url", "vtab", "array", "modern_sqlite"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
 tracing = "0.1.40"
-lz-core = {path = "../lz-core"}
 once_cell = "1.19.0"
 indoc = "2.0.4"
 url = { version = "2.5.0", features = ["serde"] }
+sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio"] }
 
 [dev-dependencies]
 test-log = { version = "0.2.14", features = ["trace"], default-features = false }
