--- a/src/lz-db/Cargo.toml
+++ b/src/lz-db/Cargo.toml
@@ -13,7 +13,8 @@ tracing = "0.1.40"
 once_cell = "1.19.0"
 indoc = "2.0.4"
 url = { version = "2.5.0", features = ["serde"] }
-sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio"] }
+sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "json"] }
+serde_json = { version = "1.0.114", features = ["raw_value"] }
 
 [dev-dependencies]
 test-log = { version = "0.2.14", features = ["trace"], default-features = false }
