Initial work on a command-line interface
We support an *extremely* basic CLI, just `lz add` for now: all it does
is load the page to grab the title, and stuff those into the DB.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ resolver = "2"
 members = [
   "src/lz-db",
   "src/lz-import-linkding",
-  "src/lz-web"
+  "src/lz-web",
+  "src/lz-cli"
 ]
 
 [workspace.package]
