--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lz-db = { path = "../lz-db" }
 axum = "0.7.4"
 serde = "1.0.197"
 serde_json = "1.0.114"
@@ -15,3 +16,6 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 utoipa = { version = "4.2.0", features = ["axum_extras"] }
 utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
+clap = { version = "4.5.1", features = ["derive"] }
+anyhow = { version = "1.0.80", features = ["backtrace"] }
+async-trait = "0.1.77"
