--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "lz-web"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,7 +16,6 @@ tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 utoipa = { version = "4.2.0", features = ["axum_extras"] }
-utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
 clap = { version = "4.5.1", features = ["derive"] }
 anyhow = { version = "1.0.80", features = ["backtrace"] }
 async-trait = "0.1.77"
@@ -23,3 +23,5 @@ thiserror = "1.0.57"
 axum-valid = { version = "0.16.0", features = ["into_json"] }
 static_assertions = "1.1.0"
 validator = { version = "=0.16.1", features = ["derive"] }
+utoipa-redoc = { version = "3.0.0", features = ["axum"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
