--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.24.8",
+    "openapi-fetch": "^0.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +24,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "openapi-typescript": "^6.7.4",
+    "openapi-typescript-helpers": "^0.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
