--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -22,10 +22,13 @@
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "openapi-typescript": "^6.7.4",
     "openapi-typescript-helpers": "^0.0.7",
+    "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
