--- a/lz-frontend/tsconfig.json
+++ b/lz-frontend/tsconfig.json
@@ -20,8 +20,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* recommended by openapi-typescript: */
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "plugins": [{ "name": "typescript-eslint-language-service" }]
   },
   "include": ["src"],
+  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
