Revert "Configure eslint & prettier to work together"
This reverts commit ab2ee74916b2619f690501e3b5e19f66452348ee.

Well, this sucks: eslint doesn't integrate with
typescript-language-server for some reason. I don't love that.

--- a/lz-frontend/tsconfig.json
+++ b/lz-frontend/tsconfig.json
@@ -20,10 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* recommended by openapi-typescript: */
-    "noUncheckedIndexedAccess": true,
-    "plugins": [{ "name": "typescript-eslint-language-service" }]
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src"],
-  "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
