--- a/lz-frontend/tsconfig.json
+++ b/lz-frontend/tsconfig.json
@@ -19,6 +19,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "plugins": [
+      {
+        "name": "typescript-eslint-language-service"
+      }
+    ],
     /* recommended by openapi-typescript: */
     "noUncheckedIndexedAccess": true
   },
