--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^5.24.8",
     "openapi-fetch": "^0.9.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "water.css": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
