--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -14,6 +14,7 @@
     "openapi-fetch": "^0.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
     "water.css": "^2.1.1"
   },
   "devDependencies": {
