--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "tiny-invariant": "^1.3.3",
     "water.css": "^2.1.1"
   },
   "devDependencies": {
