--- a/lz-frontend/package.json
+++ b/lz-frontend/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.24.8",
+    "framer-motion": "^11.0.14",
     "openapi-fetch": "^0.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
-    "tiny-invariant": "^1.3.3",
-    "water.css": "^2.1.1"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
