--- a/src/lz-cli/Cargo.toml
+++ b/src/lz-cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.80"
+chrono = "0.4.35"
 clap = { version = "4.5.1", features = ["derive"] }
 reqwest = "0.11.25"
 scraper = "0.19.0"
