--- a/src/lz-import-linkding/Cargo.toml
+++ b/src/lz-import-linkding/Cargo.toml
@@ -5,15 +5,15 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-anyhow = "1.0.80"
-chrono = { version = "0.4.34", features = ["serde"] }
-clap = { version = "4.5.1", features = ["derive"] }
-futures = "0.3.30"
+anyhow = { workspace = true }
+chrono = { workspace = true, features = ["serde"] }
+clap = { workspace = true, features = ["derive"] }
+futures = { workspace = true }
 lz-db = { version = "0.1.0", path = "../lz-db" }
-serde = "1.0.197"
-serde_json = { version = "1.0.114", features = ["raw_value"] }
-sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "chrono", "json"] }
-tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["json"] }
-url = "2.5.0"
+serde = { workspace = true }
+serde_json = { workspace = true, features = ["raw_value"] }
+sqlx = { workspace = true, features = ["sqlite", "migrate", "runtime-tokio", "chrono", "json"] }
+tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["json"] }
+url = { workspace = true }
