--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -7,29 +7,29 @@ license.workspace = true
 
 [dependencies]
 lz-db = { path = "../lz-db" }
-axum = { version = "0.7.4", features = ["macros"] }
-serde = "1.0.197"
-serde_json = "1.0.114"
-sqlx = { version = "0.7.3", features = ["runtime-tokio"] }
-tokio = { version = "1.36.0", features = ["tracing", "macros", "rt-multi-thread"] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
-utoipa = { version = "4.2.0", features = ["axum_extras"] }
-clap = { version = "4.5.1", features = ["derive"] }
-anyhow = { version = "1.0.80", features = ["backtrace"] }
-async-trait = "0.1.77"
-thiserror = "1.0.57"
-axum-valid = { version = "0.16.0", features = ["into_json"] }
-static_assertions = "1.1.0"
-validator = { version = "=0.16.1", features = ["derive"] }
-utoipa-redoc = { version = "3.0.0", features = ["axum"] }
-utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
-tower = { version = "0.4.13", features = ["tracing"] }
-tower-http = { version = "0.5.2", features = ["tracing", "full"] }
-opentelemetry = "0.22.0"
-opentelemetry_sdk = { version = "0.22.1", features = ["tokio", "trace", "logs", "url", "rt-tokio"] }
-tracing-opentelemetry = "0.23"
-opentelemetry-otlp = { version = "0.15.0", features = ["trace", "logs", "metrics", "serde", "tonic"] }
-url = { version = "2.5.0", features = ["serde"] }
-tonic = "0.11.0"
-tonic-web = "0.11.0"
+axum = { workspace = true, features = ["macros"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+sqlx = { workspace = true, features = ["runtime-tokio"] }
+tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
+utoipa = { workspace = true, features = ["axum_extras"] }
+clap = { workspace = true, features = ["derive"] }
+anyhow = { workspace = true, features = ["backtrace"] }
+async-trait = { workspace = true }
+thiserror = { workspace = true }
+axum-valid = { workspace = true, features = ["into_json"] }
+static_assertions = { workspace = true }
+validator = { workspace = true, features = ["derive"] }
+utoipa-redoc = { workspace = true, features = ["axum"] }
+utoipa-swagger-ui = { workspace = true, features = ["axum"] }
+tower = { workspace = true, features = ["tracing"] }
+tower-http = { workspace = true, features = ["tracing", "full"] }
+opentelemetry = { workspace = true }
+opentelemetry_sdk = { workspace = true, features = ["tokio", "trace", "logs", "url", "rt-tokio"] }
+tracing-opentelemetry = { workspace = true }
+opentelemetry-otlp = { workspace = true, features = ["trace", "logs", "metrics", "serde", "tonic"] }
+url = { workspace = true, features = ["serde"] }
+tonic = { workspace = true }
+tonic-web = { workspace = true }
