Use test_context to gather all the test defaults into one place
This allows us to:

* Set up tracing & logging the way we need it (logging at debug level,
  with span creations/closes recorded)

* Create a DB connection that we can use the same way an application
  DB connection would

* Control migration-application behavior (defaulting to "apply
  migrations", ofc)

...and all that with only one new test attribute (instead of the
complicated/weird test_log::test(sqlx::test(...)) construction).

--- a/src/lz-db/Cargo.toml
+++ b/src/lz-db/Cargo.toml
@@ -18,4 +18,5 @@ chrono = { version = "0.4.34", features = ["serde"] }
 utoipa = { version = "4.2.0", features = ["chrono", "url"] }
 
 [dev-dependencies]
-test-log = { version = "0.2.14", features = ["trace"], default-features = false }
+test-context = "0.3.0"
+tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
