Use the testresult crate for nicer test results
Instead of having to put .context() on all sorts of error
locations (which still is imprecise!), this gives a really precise error
location (the place in the test where the error occurred) and still
allows for more context if needed (e.g. in loop iterations).

--- a/src/lz-db/Cargo.toml
+++ b/src/lz-db/Cargo.toml
@@ -19,4 +19,5 @@ utoipa = { version = "4.2.0", features = ["chrono", "url"] }
 
 [dev-dependencies]
 test-context = "0.3.0"
+testresult = "0.4.0"
 tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
