--- a/src/lz-db/Cargo.toml
+++ b/src/lz-db/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["tracing", "macros", "rt-multi-thread"] }
 tracing = { workspace = true }
+thiserror = { workspace = true }
 once_cell = { workspace = true }
 indoc = { workspace = true }
 url = { workspace = true, features = ["serde"] }
