Remove the otlp tracing layer, report to sentry instead
Sentry presents a lot more data in a nicer way, doesn't cause error
logs if no sentry DSN is configured, and can be made to work by
default (by setting a sentry DSN). Seems eminently reasonable tbh.

--- a/src/lz-cli/Cargo.toml
+++ b/src/lz-cli/Cargo.toml
@@ -16,6 +16,7 @@ chrono = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
+sentry = { workspace = true }
 
 [dependencies.lz-db]
 path = "../lz-db"
