--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,6 @@ tracing-web = "0.1.3"
 yew-router = "0.18.0"
 yew-autocomplete = "0.3.1"
 itertools = "0.12.1"
+sentry = "0.32.3"
+sentry-tower = "0.32.3"
+sentry-tracing = "0.32.3"
