Set up a dioxus-based crate (wasm) for front-end stuff
This might be nice - it allows us to generate the openapi client
~internally, the types could line up, and generally dioxus seems
really neat. Let's see how it handles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
   "src/lz-db",
   "src/lz-import-linkding",
   "src/lz-web",
-  "src/lz-cli"
+  "src/lz-cli",
+  "src/lz-ui",
 ]
 
 [workspace.package]
