Make lz-cli the default member of the workspace
This allows "cargo run" to pick it up without any extra args.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 resolver = "2"
 
+default-members = ["src/lz-cli"]
+
 # We place member crates in the src/ directory:
 members = [
   "src/lz-db",
