--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lz-openapi = { path = "../lz-openapi" }
 dioxus = { version = "0.5", features = ["web", "router"] }
 tracing = {workspace = true}
 tracing-wasm = {version = "0.2.1"}
