--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,12 +31,16 @@ once_cell = "1.19.0"
 opentelemetry = "0.22.0"
 opentelemetry-otlp = "0.15.0"
 opentelemetry_sdk = "0.22.1"
+prettyplease = "0.1.25"
+progenitor = "0.6.0"
+progenitor-client = "0.6.0"
 reqwest = "0.11.25"
 scraper = "0.19.0"
 serde = "1.0.197"
 serde_json = "1.0.114"
 sqlx = "0.7.3"
 static_assertions = "1.1.0"
+syn = "1.0"
 test-context = "0.3.0"
 testresult = "0.4.0"
 thiserror = "1.0.57"
