--- a/src/lz-cli/Cargo.toml
+++ b/src/lz-cli/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+dev = ["lz-web/dev"]
+
 [dependencies]
 anyhow = { workspace = true }
 chrono = { workspace = true }
