--- a/src/lz-openapi/Cargo.toml
+++ b/src/lz-openapi/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lz-openapi"
-version = "0.1.0"
-edition = "2021"
-license = "SPECIFY A LICENSE BEFORE PUBLISHING"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 bytes = "1.4.0"
@@ -12,4 +12,4 @@ percent-encoding = "2.3.0"
 reqwest = { version = "0.11.20", default-features=false, features = ["json", "stream"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_urlencoded = "0.7.1"
-
+progenitor-client = {workspace = true}
