--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lz-ui"
-version = "0.1.0"
-authors = ["Andreas Fuchs <asf@boinkor.net>"]
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
