--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+default = []
+dev = ["progenitor", "syn", "prettyplease"]
 
 [dependencies]
 lz-db = { path = "../lz-db" }
@@ -33,3 +36,8 @@ opentelemetry-otlp = { workspace = true, features = ["trace", "logs", "metrics",
 url = { workspace = true, features = ["serde"] }
 tonic = { workspace = true }
 tonic-web = { workspace = true }
+
+# Deps for generating the rust client:
+progenitor = { workspace = true, optional = true }
+syn = { workspace = true, optional = true }
+prettyplease = { workspace = true, optional = true }
