Autoinherit all the crate deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ anyhow = "1.0.80"
 async-trait = "0.1.77"
 axum = "0.7.4"
 axum-valid = "0.16.0"
-chrono = "0.4.35"
+chrono = { version = "0.4.35", default-features = false }
 clap = "4.5.1"
 futures = "0.3.30"
 indoc = "2.0.4"
@@ -34,7 +34,7 @@ opentelemetry_sdk = "0.22.1"
 prettyplease = "0.1.25"
 progenitor = "0.6.0"
 progenitor-client = "0.6.0"
-reqwest = "0.11.25"
+reqwest = { version = "0.11.25", default-features = false }
 scraper = "0.19.0"
 serde = "1.0.197"
 serde_json = "1.0.114"
@@ -57,3 +57,12 @@ utoipa = "4.2.0"
 utoipa-redoc = "3.0.0"
 utoipa-swagger-ui = "6.0.0"
 validator = "=0.16.1"
+bytes = "1.4.0"
+console_error_panic_hook = "0.1.7"
+dioxus = "0.5"
+dioxus-logger = "0.4.1"
+futures-core = "0.3.28"
+log = "0.4.19"
+percent-encoding = "2.3.0"
+serde_urlencoded = "0.7.1"
+tracing-wasm = "0.2.1"
