--- a/src/lz-ui/Dioxus.toml
+++ b/src/lz-ui/Dioxus.toml
@@ -41,3 +41,6 @@ script = []
 # Javascript code file
 # serve: [dev-server] only
 script = []
+
+[[web.proxy]]
+backend = "http://127.0.0.1:3000/api"
