Unify the bookmark-listing routes, improve the OpenAPI docs
This should work much better now that things happen via the URL query
in the API, and be more extensible too.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,3 +66,5 @@ log = "0.4.19"
 percent-encoding = "2.3.0"
 serde_urlencoded = "0.7.1"
 tracing-wasm = "0.2.1"
+axum-extra = "0.9.3"
+web-sys = "0.3.69"
