--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -11,7 +11,7 @@ lz-openapi = { path = "../lz-openapi" }
 dioxus = { workspace = true, features = ["web", "router"] }
 tracing = {workspace = true}
 tracing-wasm = { workspace = true }
-web-sys = {version = "0.3.69", features = ["Window"] }
+web-sys = { workspace = true, features = ["Window"] }
 futures = { workspace = true }
 
 # Debug
