--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -41,3 +41,4 @@ tonic-web = { workspace = true }
 progenitor = { workspace = true, optional = true }
 syn = { workspace = true, optional = true }
 prettyplease = { workspace = true, optional = true }
+axum-extra = { workspace = true, features = ["query"] }
