Broken: OK so now how do I make it reload the damn page
Anytime I add a tag to the search, it should start loading a different
set of data. But it doesn't. Apparently, coroutines are just
... around? WHY.

--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -17,3 +17,4 @@ futures = { workspace = true }
 # Debug
 log = { workspace = true }
 console_error_panic_hook = { workspace = true }
+urlencoding = "2.1.3"
