--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -42,3 +42,5 @@ progenitor = { workspace = true, optional = true }
 syn = { workspace = true, optional = true }
 prettyplease = { workspace = true, optional = true }
 axum-extra = { workspace = true, features = ["query"] }
+askama_axum = "0.4.0"
+askama = { version = "0.12.1", features = ["with-axum", "serde"] }
