--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,3 +67,5 @@ serde_urlencoded = "0.7.1"
 tracing-wasm = "0.2.1"
 axum-extra = "0.9.3"
 web-sys = "0.3.69"
+askama = "0.12.1"
+askama_axum = "0.4.0"
