Bookmark editing on the webface
This looks awful, but it works pretty ~decently? It's absolutely
unstyled, but works just about the way I want it to and it's real
fast.

--- a/src/lz-web/Cargo.toml
+++ b/src/lz-web/Cargo.toml
@@ -45,6 +45,11 @@ axum-extra = { workspace = true, features = ["query"] }
 askama_axum = { workspace = true }
 askama = { workspace = true, features = ["with-axum", "serde"] }
 
+[dev-dependencies]
+axum-test = { workspace = true }
+chrono = { workspace = true, features = ["serde"] }
+testresult = { workspace = true }
+
 # From https://djc.github.io/askama/performance.html:
 [profile.dev.package.askama_derive]
 opt-level = 3
