Fix clippy complaints about the openapi client generator
Due to the difference in features used in CI tasks, the generator
would complain or it wouldn't. This rewrites things such that the
complaint will be unnecessary.

Also, re-generates the openapi client.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,3 +70,7 @@ web-sys = "0.3.69"
 askama = "0.12.1"
 askama_axum = "0.4.0"
 axum-test = "14.8.0"
+
+# From https://djc.github.io/askama/performance.html:
+[profile.dev.package.askama_derive]
+opt-level = 3
