Get rudimentary rendering of the first batch of bookmarks working
Ok, this shows promise; I think I might have got the hang of it.

--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -10,3 +10,9 @@ license.workspace = true
 yew = { workspace = true, features = ["csr"] }
 
 lz-openapi = {path = "../lz-openapi"}
+bounce = { workspace = true, features = ["query", "helmet"] }
+async-trait.workspace = true
+web-sys = { workspace = true, features = ["Window"] }
+anyhow = {workspace = true}
+thiserror.workspace = true
+tracing.workspace = true
