--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -18,3 +18,4 @@ thiserror.workspace = true
 tracing.workspace = true
 tracing-web = { workspace = true }
 tracing-subscriber.workspace = true
+yew-router = { workspace = true }
