--- a/src/lz-ui/Trunk.toml
+++ b/src/lz-ui/Trunk.toml
@@ -1,3 +1,7 @@
 [[proxy]]
   rewrite = "/api/"
   backend = "http://localhost:3000/api/"
+
+[[proxy]]
+  rewrite = "/docs/"
+  backend = "http://localhost:3000/docs/"
