Add a create_bookmark route to the API
This should allow adding new links, once we have the form for it. This
change also required un-deriving Hash from all types in the generated
OpenAPI client & manually deriving it for types in the search input.

--- a/src/lz-openapi/Cargo.toml
+++ b/src/lz-openapi/Cargo.toml
@@ -12,4 +12,5 @@ percent-encoding = { workspace = true }
 reqwest = { workspace = true, features = ["json", "stream"] }
 serde = { workspace = true, features = ["derive"] }
 serde_urlencoded = { workspace = true }
+serde_json = {workspace = true}
 progenitor-client = {workspace = true}
