--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -19,3 +19,4 @@ tracing.workspace = true
 tracing-web = { workspace = true }
 tracing-subscriber.workspace = true
 yew-router = { workspace = true }
+yew-autocomplete = { workspace = true }
