Add a very basic flow for saving bookmarks
This doesn't work because we can't just go about retrieving stuff from
the web with reqwest; instead, we'd have to do something CORS-y (which
is impossible), or use the server.

--- a/src/lz-http/Cargo.toml
+++ b/src/lz-http/Cargo.toml
@@ -10,4 +10,5 @@ license.workspace = true
 reqwest.workspace = true
 scraper.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
 url.workspace = true
