--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -8,8 +8,6 @@ license.workspace = true
 
 [dependencies]
 yew = { workspace = true, features = ["csr"] }
-
-lz-openapi = {path = "../lz-openapi"}
 bounce = { workspace = true, features = ["query", "helmet"] }
 async-trait.workspace = true
 web-sys = { workspace = true, features = ["Window"] }
@@ -21,3 +19,10 @@ tracing-subscriber.workspace = true
 yew-router = { workspace = true }
 yew-autocomplete = { workspace = true }
 itertools = { workspace = true }
+url.workspace = true
+
+[dependencies.lz-openapi]
+path = "../lz-openapi"
+
+[dependencies.lz-http]
+path = "../lz-http"
