--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -20,6 +20,8 @@ yew-router = { workspace = true }
 yew-autocomplete = { workspace = true }
 itertools = { workspace = true }
 url.workspace = true
+chrono = { workspace = true, features = ["wasmbind", "serde", "clock"] }
+serde_json.workspace = true
 
 [dependencies.lz-openapi]
 path = "../lz-openapi"
