Use wasm_bindgen to setup sentry on the frontend
This captures panics, but doesn't really present them in the nicest
way. I'm not sure how to improve it, but it's better than not seeing
them.

--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -22,6 +22,7 @@ itertools = { workspace = true }
 url.workspace = true
 chrono = { workspace = true, features = ["wasmbind", "serde", "clock"] }
 serde_json.workspace = true
+wasm-bindgen = { workspace = true }
 
 [dependencies.lz-openapi]
 path = "../lz-openapi"
