--- a/src/lz-ui/Trunk.toml
+++ b/src/lz-ui/Trunk.toml
@@ -5,3 +5,13 @@
 [[proxy]]
   rewrite = "/docs/"
   backend = "http://localhost:3000/docs/"
+
+[[hooks]]
+  stage = "pre_build"
+  command = "yarn"
+  command_arguments = ["install"]
+
+[[hooks]]
+  stage = "build"
+  command = "node"
+  command_arguments = ["esbuild.js"]
