--- a/src/lz-ui/package.json
+++ b/src/lz-ui/package.json
@@ -2,6 +2,11 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
     "daisyui": "^4.10.1",
+    "esbuild": "^0.20.2",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "@sentry/browser": "^7.111.0",
+    "@sentry/wasm": "^7.111.0"
   }
 }
