Use our JS portal process to pull in autocomplete-core
This is a library that explicitly supports the "multiple pills" kind
of usage that I'm aiming for, let's hope it works.

--- a/src/lz-ui/package.json
+++ b/src/lz-ui/package.json
@@ -6,6 +6,7 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.17.0",
     "@sentry/browser": "^7.111.0",
     "@sentry/wasm": "^7.111.0"
   }
