Pull in algolia's autocomplete-js, make a miinnnnnnimal JS bridge for it
This is a much more fully-featured autocomplete setup, which allows
things like autocompleting in an input box and such. Might work for us!

--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -23,6 +23,8 @@ url.workspace = true
 chrono = { workspace = true, features = ["wasmbind", "serde", "clock"] }
 serde_json.workspace = true
 wasm-bindgen = { workspace = true }
+serde = {workspace = true, features=["derive"]}
+js-sys = { workspace = true }
 
 [dependencies.lz-openapi]
 path = "../lz-openapi"
