Convert the non-editing bits into patternfly
It's not ugly! And it feels much easier to write, so maybe this will
be a thing.

--- a/src/lz-ui/package.json
+++ b/src/lz-ui/package.json
@@ -1,12 +1,11 @@
 {
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
-    "daisyui": "^4.10.1",
-    "esbuild": "^0.20.2",
-    "tailwindcss": "^3.4.3"
+    "esbuild": "^0.20.2"
   },
   "dependencies": {
     "@sentry/browser": "^7.111.0",
-    "@sentry/wasm": "^7.111.0"
+    "@sentry/wasm": "^7.111.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@patternfly/patternfly": "^5.3.0"
   }
 }
