--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -23,6 +23,7 @@ url.workspace = true
 chrono = { workspace = true, features = ["wasmbind", "serde", "clock"] }
 serde_json.workspace = true
 wasm-bindgen = { workspace = true }
+patternfly-yew = { version = "0.6.0", features = ["icons-far", "icons-fab"] }
 
 [dependencies.lz-openapi]
 path = "../lz-openapi"
