Rewrite the tag selector as an autocompleting text box.
This looks & feels much more natural, and the code is _much_ nicer to
look at. Two things left to do:

- [ ] communicate up the selection of tags (the `onchange` event is
      not bubbled)

- [ ] remove yew_autocomplete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,7 @@ sentry = "0.32.3"
 sentry-tower = "0.32.3"
 sentry-tracing = "0.32.3"
 wasm-bindgen = "0.2.92"
+patternfly-yew = "0.6.0"
+popper-rs = "0.3.2"
+yew-hooks = "0.3.1"
+gloo-utils = "0.2.0"
