Improve handling of incomplete strings using insertion point pos'n
Instead of splitting by whitespace and just using the last
one (dropping valuable information on the floor), use the insertion
point to get the currently-important word, and then slice it up based
on that information.

This allows finding completion candidates in the middle of an input
field.

--- a/src/lz-ui/Cargo.toml
+++ b/src/lz-ui/Cargo.toml
@@ -32,4 +32,5 @@ gloo-utils = { workspace = true }
 path = "../lz-openapi"
 
 [dev-dependencies]
-test-case = "3.3.1"
+test-case = { workspace = true }
+tracing-test = { workspace = true }
