--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,5 @@ patternfly-yew = "0.6.0"
 popper-rs = "0.3.2"
 yew-hooks = "0.3.1"
 gloo-utils = "0.2.0"
+test-case = "3.3.1"
+tracing-test = "0.2.4"
