cargo-autoinherit run

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,5 @@ sentry = "0.32.3"
 sentry-tower = "0.32.3"
 sentry-tracing = "0.32.3"
 wasm-bindgen = "0.2.92"
+deunicode = "1.4.4"
+regex = "1.10.4"
