--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,8 @@ sentry = "0.32.3"
 sentry-tower = "0.32.3"
 sentry-tracing = "0.32.3"
 wasm-bindgen = "0.2.92"
+deunicode = "1.4.4"
+regex = "1.10.4"
 patternfly-yew = "0.6.0"
 popper-rs = "0.3.2"
 yew-hooks = "0.3.1"
