--- a/src/lz-ui/package.json
+++ b/src/lz-ui/package.json
@@ -1,10 +1,12 @@
 {
+  "name": "lz-ui-js",
+  "version": "0.0.1",
+  "license": "MIT",
+
   "devDependencies": {
     "esbuild": "^0.20.2"
   },
   "dependencies": {
-    "@sentry/browser": "^7.111.0",
-    "@sentry/wasm": "^7.111.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@patternfly/patternfly": "^5.3.0"
   }
